attempt to fix video not playing on mobile

--- a/Custom.css
+++ b/Custom.css
@@ -8,10 +8,6 @@
     min-height: 100vh;
 }
 
-.img-background {
-    width: 100%;
-    min-height: auto;
-}
 
 .caption {
     position: absolute;
